______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.163:

* XINS/Java Common Library:
  - Added missing package.html for org.xins.logdoc.

* Build and release process:
  - Linking to xmlenc 0.43 API docs.

* Generated build file:
  - Linking to xmlenc 0.43 API docs.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.162:

* XINS/Java Server Framework:
  - Added support for meta-function _GetLogStatistics.
  - The statistics which were in Function are now in a separate
    FunctionStatistics class. This class has also a method to update the
    statistics.

* XINS/Java Common Library:
  - Added package org.xins.logdoc. Including classes AbstractLog,
    LogStatistics and NoSuchTranslationBundleException.

* Logdoc:
  - Generating counter per log entry.
  - Logdoc Log classes now extend org.xins.logdoc.AbstractLog.
  - Not generating NoSuchTranslationBundleException, but using the
    org.xins.logdoc package.

* Generated specification documentation:
  - Added DTD's for to project, API, type, result code and function XML files.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.161:

* Dependencies:
  - Updated to xmlenc 0.43.

* XINS/Java Server Framework:
  - Documented the Throwable exception thrown by call(...) method in the
    generated fundament class for a function.
  - Changed levels for log message entry 3005 from DEBUG to INFO (Logging
    subsystem has been properly initialized)
  - Changed fallback default log message output pattern to:
    "%-4c{1} %-6p %m%n" (without the quotes).
  - Improved translations for log message 5018.
  - Added log entry group runtime.http. Moved log messages 5000 and 5001 in
    this group.

* XINS/Java Common Library:
  - Added the SingleEntryMap class. This class is the implementation of a